# QtProject

CookieClicker2/: CMakeLists.txt  CustomGraph.cpp  ItemManager.h  MoneyManager.h  StatManager.h  clickableImage.cpp  clickableImage.h  clickableimage.h  cookieclicker2.cpp  cookieclicker2.h  cookieclicker2.ui  customdelegate.cpp  customdelegate.h  item.ui  main.cpp  market.ui  resources.qrc  stat.ui
